--- a/src/css/modules.css
+++ b/src/css/modules.css
@@ -886,7 +886,7 @@
 }
 
 .event-page-info-icon {
-    width: 22px;
+    width: 20px;
 }
 
 .event-page-info-header {
@@ -932,6 +932,29 @@
     height: 20px;
     padding: 12px 0px;
     font-size: 10px;
+}
+
+.event-page-info-description {
+    color: #5A5A5A;
+    font-size: 14px;
+}
+
+.buy-ticket-button {
+    width: 150px;
+    height: 45px;
+    background-color: #FFE047;
+    color: #2B293D;
+    font-size: 14px;
+    font-weight: 600;
+    place-self: center;
+}
+
+.buy-ticket-section {
+    gap: 25px;
+}
+
+.buy-ticket-section div {
+    gap: 10px;
 }
 
 @media screen and (min-width: 375px) {
@@ -999,6 +1022,10 @@
     .event-page-image {
         height: 300px;
     }
+
+    .location-embed {
+        max-width: 350px;
+    }
 }
 
 @media screen and (min-width: 525px) {
@@ -1021,6 +1048,18 @@
     .hero-title2 {
         font-size: 45px;
         padding-left: 200px;
+    }
+
+    .location-embed {
+        max-width: 400px;
+    }
+
+    .event-page-title {
+        font-size: 20px;
+    }
+
+    .event-page-info-header {
+        font-size: 18px;
     }
 }
 
@@ -1100,6 +1139,49 @@
 
     .event-card {
         height: 150px;
+    }
+
+    .event-page-title {
+        font-size: 24px;
+    }
+
+    .event-page-info-header {
+        font-size: 19px;
+    }
+
+    .event-page-info-text {
+        font-size: 14px;
+    }
+
+    .event-page-info-icon {
+        width: 22px;
+    }
+
+    .location-embed {
+        max-width: 450px;
+        height: 300px;
+    }
+
+    .host-image {
+        width: 75px;
+        height: 75px;
+    }
+
+    .event-page-info-section {
+        gap: 20px;
+    }
+
+    .event-page-info-description {
+        font-size: 16px;
+    }
+
+    .top-section-icons {
+        width: 29px;
+        height: 29px;
+    }
+
+    .event-page-info-section {
+        gap: 10px;
     }
 }
 
